--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,9 +14,9 @@ repos:
     hooks:
       - id: check-case-conflict
       - id: trailing-whitespace
-        exclude: \.output
+        exclude: \.(output|patch)
       - id: end-of-file-fixer
-        exclude: \.(cp?p?$|output)
+        exclude: \.(cp?p?$|output|patch)
       - id: check-added-large-files
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
@@ -46,7 +46,7 @@ repos:
         args: ["-v", "-x", "c++", "--inline-suppr", "--suppress-xml=src/.cppcheck-suppress.xml"]
 
       - id: cpplint
-        args: ["--exclude=src/ch14/cpp/flatbuffers/*_generated.*", "--root", "src"]
+        args: ["--exclude=src/ch14/cpp/flatbuffers/*_generated.*", "--exclude=src/docker_images/build_image/patches", "--root", "src"]
         additional_dependencies:
           [cpplint==1.6.1]
       # - id: include-what-you-use
