--- a/src/ch06/cpp/service_base/CMakeLists.txt
+++ b/src/ch06/cpp/service_base/CMakeLists.txt
@@ -7,3 +7,4 @@ source_group(source FILES ${${PROJECT_NAME}_SRC}})
 
 add_executable("${PROJECT_NAME}" "${${PROJECT_NAME}_SRC}")
 target_link_libraries("${PROJECT_NAME}" PRIVATE socket-wrapper)
+target_compile_definitions("${PROJECT_NAME}" PRIVATE UNICODE)
