--- a/src/ch11/cpp/CMakeLists.txt
+++ b/src/ch11/cpp/CMakeLists.txt
@@ -16,5 +16,5 @@ if (UNIX)
     add_subdirectory("select_aio_server")
 #    add_subdirectory("ioring_server")
 elseif(WIN32)
-    add_subdirectory("iocp_server")
+    # add_subdirectory("iocp_server")
 endif()
