--- a/src/ch06/cpp/enum_protocols/CMakeLists.txt
+++ b/src/ch06/cpp/enum_protocols/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project("${CHAPTER_NAME}windows-ping" C CXX)
+project("${CHAPTER_NAME}enum-protocols" C CXX)
 
 set(${PROJECT_NAME}_SRC main.cpp)
 
