--- a/src/ch06/cpp/notify/CMakeLists.txt
+++ b/src/ch06/cpp/notify/CMakeLists.txt
@@ -2,9 +2,5 @@ cmake_minimum_required(VERSION 3.10)
 
 project("${CHAPTER_NAME}route-notification" C CXX)
 
-set(${PROJECT_NAME}_SRC main.cpp)
-
-source_group(source FILES ${${PROJECT_NAME}_SRC}})
-
-add_executable("${PROJECT_NAME}" "${${PROJECT_NAME}_SRC}")
-target_link_libraries("${PROJECT_NAME}" socket-wrapper iphlpapi)
+add_executable("${PROJECT_NAME}" main.cpp)
+target_link_libraries("${PROJECT_NAME}" socket-wrapper iphlpapi ntdll)
