Windows adapters info get example implemented

--- a/src/ch06/cpp/CMakeLists.txt
+++ b/src/ch06/cpp/CMakeLists.txt
@@ -2,9 +2,11 @@ cmake_minimum_required(VERSION 3.10)
 
 if (WIN32)
     add_subdirectory("pil")
-    #add_subdirectory("enum_protocols")
+    add_subdirectory("enum_protocols")
     add_subdirectory("service_base")
     add_subdirectory("mailslot")
     add_subdirectory("named_pipe")
+    add_subdirectory("notify")
+    add_subdirectory("get_adapters")
     add_subdirectory("wping")
 endif()
