WinInet example add

--- a/src/ch06/cpp/CMakeLists.txt
+++ b/src/ch06/cpp/CMakeLists.txt
@@ -9,4 +9,5 @@ if (WIN32)
     add_subdirectory("notify")
     add_subdirectory("get_adapters")
     add_subdirectory("wping")
+    add_subdirectory("winet")
 endif()
