--- a/src/ch11/cpp/CMakeLists.txt
+++ b/src/ch11/cpp/CMakeLists.txt
@@ -14,7 +14,7 @@ if (UNIX)
     add_subdirectory("c_ares_example")
     add_subdirectory("asio_resolver")
     add_subdirectory("select_aio_server")
-#    add_subdirectory("ioring_server")
+    add_subdirectory("ioring_server")
 elseif(WIN32)
     # add_subdirectory("iocp_server")
 endif()
