--- a/src/ch17/cpp/CMakeLists.txt
+++ b/src/ch17/cpp/CMakeLists.txt
@@ -14,4 +14,5 @@ if (UNIX)
     add_subdirectory("oatpp-example")
     add_subdirectory("webtoolkit-example")
     add_subdirectory("sdl-get")
+    add_subdirectory("seastar-example")
 endif()
