Chapter 4 sockopt example add

--- a/src/ch04/cpp/CMakeLists.txt
+++ b/src/ch04/cpp/CMakeLists.txt
@@ -4,4 +4,5 @@ if (UNIX)
     add_subdirectory("ancil_data_recv")
 #    add_subdirectory("recvmsg")
     add_subdirectory("send_recv_descriptors")
+    add_subdirectory("sockopt")
 endif()
