--- a/src/ch05/cpp/CMakeLists.txt
+++ b/src/ch05/cpp/CMakeLists.txt
@@ -5,7 +5,7 @@ if (UNIX)
     add_subdirectory("if_rename")
     add_subdirectory("sysconf")
     add_subdirectory("netlink")
-#    add_subdirectory("rtnetlink")
+    add_subdirectory("rtnetlink")
     add_subdirectory("sockdiag")
     add_subdirectory("ethtool")
     add_subdirectory("mii_example")
