--- a/src/book01/ch11/cpp/CMakeLists.txt
+++ b/src/book01/ch11/cpp/CMakeLists.txt
@@ -5,5 +5,5 @@ if (UNIX)
     add_subdirectory("rtnetlink")
     add_subdirectory("sockdiag")
     add_subdirectory("lib-mnl")
-    # add_subdirectory("libnl")
+    add_subdirectory("libnl")
 endif()
