IPRoute2 internal library disabled

--- a/src/book01/ch11/cpp/CMakeLists.txt
+++ b/src/book01/ch11/cpp/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 if (UNIX)
     add_subdirectory("netlink")
-    add_subdirectory("rtnetlink")
+#    add_subdirectory("rtnetlink")
     add_subdirectory("sockdiag")
     add_subdirectory("lib-mnl")
     add_subdirectory("libnl")
