--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -148,23 +148,23 @@ RUN \
 ADD ./.gitconfig /etc/skel/
 ADD ./patches /tmp/
 
-RUN \
-    # Need for the iproute2 package build: \
-    apt-get update \
-    && apt-get -y --no-install-recommends --show-progress install \
-        build-essential:native build-essential:native bison debhelper-compat dh-package-notes flex libxtables-dev libatm1-dev libcap-dev po-debconf dialog \
-    && mkdir /tmp/iproute_install \
-    && cd /tmp/iproute_install  \
-    && apt-get source iproute2 \
-    && cd iproute2-6.7.0/ \
-    && sed -i -e '1 i\include/* /usr/include/iproute2/' -e '$a\lib/*.a /usr/lib/${DEB_HOST_MULTIARCH}/' debian/iproute2.install \
-    && cp /tmp/patches/0003-librtnetnlink-add.patch debian/patches \
-    && echo "0003-librtnetnlink-add.patch" >>  debian/patches/series \
-    && dpkg-buildpackage -us -uc \
-    && DEBIAN_FRONTEND=noninteractive dpkg -i ../iproute2_6.7.0-2~bpo12+1_amd64.deb \
-    && cd / \
-    && rm -rf /tmp/iproute_install \
-    && apt-get clean
+#RUN \
+#    # Need for the iproute2 package build: \
+#    apt-get update \
+#    && apt-get -y --no-install-recommends --show-progress install \
+#        build-essential:native build-essential:native bison debhelper-compat dh-package-notes flex libxtables-dev libatm1-dev libcap-dev po-debconf dialog \
+#    && mkdir /tmp/iproute_install \
+#    && cd /tmp/iproute_install  \
+#    && apt-get source iproute2 \
+#    && cd iproute2-6.7.0/ \
+#    && sed -i -e '1 i\include/* /usr/include/iproute2/' -e '$a\lib/*.a /usr/lib/${DEB_HOST_MULTIARCH}/' debian/iproute2.install \
+#    && cp /tmp/patches/0003-librtnetnlink-add.patch debian/patches \
+#    && echo "0003-librtnetnlink-add.patch" >>  debian/patches/series \
+#    && dpkg-buildpackage -us -uc \
+#    && DEBIAN_FRONTEND=noninteractive dpkg -i ../iproute2_6.7.0-2~bpo12+1_amd64.deb \
+#    && cd / \
+#    && rm -rf /tmp/iproute_install \
+#    && apt-get clean
 
 #RUN \
 #  git clone --recursive --depth 1 https://github.com/Kitware/CMake \
