Windows build fix

--- a/src/book01/ch02/cpp/CMakeLists.txt
+++ b/src/book01/ch02/cpp/CMakeLists.txt
@@ -2,4 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 add_subdirectory(resolve)
 add_subdirectory(ip_convert)
-add_subdirectory(namespaces)
+
+if (NOT WIN32)
+	add_subdirectory(namespaces)
+endif()
