--- a/src/book01/ch15/cpp/netbios/CMakeLists.txt
+++ b/src/book01/ch15/cpp/netbios/CMakeLists.txt
@@ -6,5 +6,5 @@ set(${PROJECT_NAME}_SRC main.cpp)
 source_group(source FILES ${${PROJECT_NAME}_SRC}})
 
 add_executable("${PROJECT_NAME}" "${${PROJECT_NAME}_SRC}")
-target_link_libraries("${PROJECT_NAME}" PRIVATE socket-wrapper netapi32)
+target_link_libraries("${PROJECT_NAME}" PRIVATE netapi32)
 target_compile_definitions("${PROJECT_NAME}" PRIVATE UNICODE)
