--- a/src/book01/ch11/cpp/CMakeLists.txt
+++ b/src/book01/ch11/cpp/CMakeLists.txt
@@ -4,3 +4,7 @@ if (UNIX)
     add_subdirectory("netlink")
     add_subdirectory("sockdiag")
 endif()
+
+if (APPLE)
+    add_subdirectory(mac_if_events)
+endif()
