Stacktrace example add

--- a/src/book01/ch24/cpp/CMakeLists.txt
+++ b/src/book01/ch24/cpp/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 
+
+# add_subdirectory("stacktrace")
+
 if (UNIX)
     add_subdirectory("signal_handling")
 endif()
