--- a/src/book01/ch24/cpp/CMakeLists.txt
+++ b/src/book01/ch24/cpp/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
 
-# add_subdirectory("stacktrace")
-
 if (UNIX)
-    add_subdirectory("signal_handling")
+    add_subdirectory("linux_call_intercepter")
 endif()
