--- a/src/book01/ch25/cpp/CMakeLists.txt
+++ b/src/book01/ch25/cpp/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 
+# add_subdirectory("stacktrace")
+
 if (UNIX)
-    add_subdirectory("linux_call_intercepter")
+    add_subdirectory("signal_handling")
     add_subdirectory("incorrect_udp_client")
 endif()
