--- a/src/book01/ch10/cpp/CMakeLists.txt
+++ b/src/book01/ch10/cpp/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 if (UNIX)
+    add_subdirectory("if_list")
     add_subdirectory("if_nameindex")
     add_subdirectory("if_rename")
     add_subdirectory("ethtool")
