--- a/src/book01/ch06/cpp/CMakeLists.txt
+++ b/src/book01/ch06/cpp/CMakeLists.txt
@@ -3,5 +3,6 @@ cmake_minimum_required(VERSION 3.10)
 
 if (UNIX)
     add_subdirectory("oob_example")
+    add_subdirectory("oob_select")
 	add_subdirectory(namespaces)
 endif()
