--- a/src/book02/ch04/cpp/CMakeLists.txt
+++ b/src/book02/ch04/cpp/CMakeLists.txt
@@ -1,10 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
 
-add_subdirectory("reuse_addr_test")
-add_subdirectory("reuse_addr_experiment")
-
 if (UNIX)
-    # if (LINUX)
-        add_subdirectory("tcp_congestion_control")
-    # endif()
+    add_subdirectory("select_aio_server")
 endif()
