--- a/src/book02/ch05/cpp/CMakeLists.txt
+++ b/src/book02/ch05/cpp/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 if (UNIX)
-    add_subdirectory("scatter_gatter")
+    add_subdirectory("epoll_example")
+    add_subdirectory("aio_example")
+    add_subdirectory("ioring_server")
 endif()
