--- a/src/book02/ch08/cpp/CMakeLists.txt
+++ b/src/book02/ch08/cpp/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 
 if (UNIX)
-    add_subdirectory("epoll_example")
-    add_subdirectory("aio_example")
-    add_subdirectory("ioring_server")
+    add_subdirectory("asio_buffers")
+    add_subdirectory("asio_sync_server")
+    add_subdirectory("asio_simple_async_server")
+    add_subdirectory("asio_server")
+    add_subdirectory("asio_resolver")
 endif()
