--- a/src/book02/ch11/cpp/CMakeLists.txt
+++ b/src/book02/ch11/cpp/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 
+add_subdirectory("reuse_addr_test")
+add_subdirectory("reuse_addr_experiment")
+
 if (UNIX)
-    add_subdirectory("asio_buffers")
-    add_subdirectory("asio_sync_server")
-    add_subdirectory("asio_simple_async_server")
-    add_subdirectory("asio_server")
-    add_subdirectory("asio_resolver")
+    # if (LINUX)
+        add_subdirectory("tcp_congestion_control")
+    # endif()
 endif()
