--- a/src/book02/ch07/cpp/libuv_echo_server/CMakeLists.txt
+++ b/src/book02/ch07/cpp/libuv_echo_server/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.10)
 
-project("${CHAPTER_NAME}select-aio-server" C CXX)
+project("${CHAPTER_NAME}libuv-echo-server" C CXX)
 
-set(${PROJECT_NAME}_SRC main.cpp)
+find_library(LIBUV uv REQUIRED)
+set(${PROJECT_NAME}_SRC libuv_echo_server.cpp)
 
 source_group(source FILES ${${PROJECT_NAME}_SRC}})
 
 add_executable("${PROJECT_NAME}" "${${PROJECT_NAME}_SRC}")
-target_link_libraries("${PROJECT_NAME}" socket-wrapper)
+target_link_libraries("${PROJECT_NAME}" "${LIBUV}")
 
 if(WIN32)
   target_link_libraries("${PROJECT_NAME}" wsock32 ws2_32)
 endif()
-
